Address PR reviews - Use id in json instead of uuid, to keep things consistent. Update Swagger docs. - Fetch user identifier from context when creating a new downtime event.
